[workspace]
members = ["server", "client", "shared", "gfx", "admin_client"]
resolver = "2"

#//TODO: leave here only deps used in 2+ crates
[workspace.dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"
derive-getters = "0.5.0"
env_logger = "0.11"
log = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.128"
# TLS
tokio-rustls = { version = "0.26.0"}
rustls-pemfile = "2.2.0"
rustls = "0.23.18"