[package]
name = "admin_client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# TLS
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls = { workspace = true }

shared = { path = "../shared" }
tokio = { version = "1.40.0", default-features = true, features = ["full"] }
unicode-width = "0.2.0"
rustyline = { version = "15.0.0", features = ["custom-bindings", "derive"] }
env_logger = { workspace = true }