[package]
name = "gfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.1"
serde_json = "1.0.129"
unicode-width = "0.1.14"
tokio = { version = "1.40.0", default-features = true, features = ["full"] }


shared = {path = "../shared"}
itertools = "0.13.0"
