[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared = { path = "../shared" }
tokio = { version = "1.40.0", default-features = true, features = ["full"] }
