[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive-getters = { workspace = true }
shared = { path = "../shared" }
tokio = { version = "1.40.0", default-features = true, features = ["full"] }
dotenv = "0.15"
regex = "1.11.0"
# TLS
tokio-rustls = { version = "0.26.0"}
rustls-pemfile = "2.2.0"
rustls = "0.23.18"